force-app/main/default/objects/PWChrono_Training_Event__c/PWChrono_Training_Event__c.object-meta.xml
<CustomObject>
    <label>Training Event</label>
    <nameField>
        <displayFormat>TRN-{00000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>