force-app/main/default/objects/PWChrono_Training_Event__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>