force-app/main/default/objects/PWChrono_Training_Event__c/fields/Training_Program__c.field-meta.xml
<CustomField>
    <fullName>Training_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Program</label>
    <referenceTo>PWChrono_Training_Program__c</referenceTo>
    <relationshipLabel>Training Events</relationshipLabel>
    <relationshipName>PWChrono_Training_Events</relationshipName>
    <type>Lookup</type>
</CustomField>