force-app/main/default/objects/PWChrono_Training_Event__c/listViews/Upcoming_Trainings.listView-meta.xml
<ListView>
    <fullName>Upcoming_Trainings</fullName>
    <columns>NAME</columns>
    <columns>Training_Program__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Upcoming Trainings</label>
</ListView>